exercício com figma

--- a/Exercicio7/index.html
+++ b/Exercicio7/index.html
@@ -26,7 +26,7 @@
         >
         <br />
 
-        <a href="intex.html"> <button class="btn">Purchase UI kit</button></a>
+        <a href="index.html"> <button class="btn">Purchase UI kit</button></a>
         <a href="index2.html"> <button class="btn">Learn more</button></a>
       </section>
       <section>
